--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,7 @@
+=== 1.0.1 / 2023-03-11
+
+ * use File.exist? because Ruby 3.2 does not have File.exists?
+
 === 0.9.8 / 2010-09-03
 
  * added option to load racksh into existing irb session
